# Ground-plane-filter-for-3D-lidar-point-cloud

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cfg/: ground_plane_fitting.cfg
launch/: ground_plane_fitting.launch
rviz/: ground_plane_fitting_rviz.rviz
src/: groundplanfit.cpp
